--- a/AIFoodApp/app/src/main/res/login/layout/activity_login.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_login.xml
@@ -69,6 +69,12 @@
             android:layout_gravity="center"
             app:srcCompat="@drawable/kakao_login_medium_wide" />
 
+        <!-- 메뉴얼 구글 로그인
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                -->
 
         <LinearLayout
             android:id="@+id/btn_google"
