메인 페이지, 초기 회원 정보 입력 화면 ui 및 일부 기능 구현

--- a/AIFoodApp/app/src/main/res/login/layout/activity_login.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_login.xml
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="AI Food App Name"
+        android:text="Plan Meal"
         android:textColor="#000000"
-        android:textSize="30sp"
+        android:textSize="40sp"
         tools:layout_marginBottom="30dp"
         tools:layout_marginTop="30dp" />
 
