--- a/AIFoodApp/app/src/main/res/main/layout/select_calendar_dialog.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/select_calendar_dialog.xml
@@ -33,6 +33,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/check_icon"
+                    android:fontFamily="@font/font_custom"
                     android:paddingStart="15dp"
                     android:text="이전 기록 확인"
                     android:textColor="#000000"
@@ -55,6 +56,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
+                android:fontFamily="@font/font_custom"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:text="※ 기록을 확인하고 싶은 날짜를 캘린더에서 직접 선택해보세요!"
@@ -83,6 +85,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
+                    android:fontFamily="@font/font_custom"
                     android:text="확인"
                     android:textColor="#216EF3" />
 
@@ -98,6 +101,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
+                    android:fontFamily="@font/font_custom"
                     android:text="취소"
                     android:textColor="#E41F1F" />
             </LinearLayout>
