--- a/AIFoodApp/app/src/main/res/main/layout/activity_initial_survey.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_initial_survey.xml
@@ -280,7 +280,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/layout_input_target_calory"
+                        android:id="@+id/layout_input_target_calorie"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -297,7 +297,7 @@
                             android:textColor="#1E1E1E" />
 
                         <EditText
-                            android:id="@+id/et_target_calory"
+                            android:id="@+id/et_target_calorie"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
