--- a/AIFoodApp/app/src/main/res/main/layout/activity_food_detail_info.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_food_detail_info.xml
@@ -37,7 +37,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/iv_foodDetail"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal"
