--- a/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
+++ b/AIFoodApp/app/src/main/res/login/layout/activity_usersetting.xml
@@ -30,7 +30,7 @@
                 android:textColor="#FFFFFF" />
 
             <Button
-                android:id="@+id/tv_modifyInfo"
+                android:id="@+id/btn_modifyInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_marginRight="10dp"
@@ -57,8 +57,8 @@
             android:layout_width="128dp"
             android:layout_height="128dp"
             android:layout_gravity="top"
-            app:civ_border_color="#AAAAAA"
             android:src="@drawable/profile"
+            app:civ_border_color="#AAAAAA"
             app:civ_border_width="2dp" />
 
         <ImageView
@@ -66,7 +66,6 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentParentEnd="true"
             android:layout_gravity="right"
             android:layout_marginBottom="4dp"
             android:background="@drawable/icon_camera"
@@ -87,7 +86,6 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:text="닉네임"
             android:layout_weight="1.5"
@@ -117,7 +115,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -128,6 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="0.5"
+            android:focusableInTouchMode="false"
             android:maxLines="1"
             android:maxLength="7"
             android:textSize="17sp"
@@ -145,7 +143,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -173,7 +170,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -200,7 +196,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -228,7 +223,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -256,7 +250,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -284,7 +277,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1.5"
-            android:enable ="false"
             android:focusableInTouchMode="false"
             android:textSize="17sp"
             android:textStyle="bold"
