--- a/AIFoodApp/app/src/main/res/main/layout/item_meal_list.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/item_meal_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="270dp"
+    android:layout_height="320dp"
     android:background="#ffffff">
 
     <LinearLayout
@@ -52,7 +52,7 @@
 
         </LinearLayout>
 
-<!--        <LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
@@ -74,7 +74,7 @@
                 android:background="#78AE3A"
                 android:text="갤러리" />
 
-        </LinearLayout>-->
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/iv_img"
