--- a/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
@@ -34,6 +34,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_weight="1"
+            android:layout_gravity="left"
             android:id="@+id/recyclerView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -44,7 +45,8 @@
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="right">
 
             <ImageView
                 android:id="@+id/iv_plusBtn"
