--- a/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
+++ b/AIFoodApp/app/src/main/res/main/layout/activity_food_analysis.xml
@@ -60,26 +60,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
-        android:layout_gravity="right"
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_weight="1"
-            android:layout_gravity="left"
+            android:layout_weight="8"
             android:id="@+id/recyclerView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1.3"
+            android:layout_weight="3"
             android:orientation="vertical"
-            android:layout_gravity="right|right"
-            android:weightSum="2">
+            android:layout_gravity="right|right">
 
             <ImageView
                 android:id="@+id/iv_plusBtn"
